# claude-code-devkit

./: .gitignore  .mcp.json  CLAUDE.md  README.md  ROADMAP.md  WHAT_I_LEARNED.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: onboarding-guide.md
.claude/commands/: map-repo.md
.claude/skills/module-summary/: SKILL.md
.claude/skills/module-summary/scripts/: extract_structure.py
.github/workflows/: tests.yml
commands/: map-repo.md
docs/: example-click.md
hooks/: format_py.py  guard_secrets.py  hooks.json
mcp/repo-archaeologist/: server.py
mcp/repo-archaeologist/analyzers/: __init__.py  history.py  modules.py  symbols.py
mcp/repo-archaeologist/tests/: test_history.py  test_modules.py  test_symbols.py
mcp/repo-archaeologist/tests/fixtures/: sample.py
skills/module-summary/: SKILL.md
