[project]
name = "claude-code-devkit"
version = "0.1.0"
description = "Repo Archaeologist — deterministic code-analysis MCP server + Claude Code plugin."
requires-python = ">=3.11"
readme = "README.md"

[tool.ruff]
target-version = "py311"
line-length = 100
# Lint only our own code; never wander into caches/venvs/plugins.
include = ["hooks/**/*.py", "mcp/**/*.py"]
extend-exclude = [".venv", "venv", "build", "dist", "**/.claude/plugins/**"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]  # errors, pyflakes, import-sort, pyupgrade, bugbear

[tool.pytest.ini_options]
testpaths = ["mcp/repo-archaeologist/tests"]
pythonpath = ["mcp/repo-archaeologist"]
addopts = "-q"
